# lifted_sampling_fo2

./: .gitignore  README.md  pyproject.toml  requirements.txt  seq.wfomcs  setup.py  test.wfomcs  tmp.wfomcs
.github/workflows/: tests.yml
models/: 2-colored-graph.wfomcs  2-regular-graph-sc2.wfomcs  2-regular-graph.wfomcs  3-matchings.wfomcs  bags.wfomcs  boss.mln  deskmate.mln  employment.mln  evaluation_generative.mln  existential.wfomcs  friends-smokes.mln  friends-smokes.wfomcs  function-no-fix-sc2.wfomcs  function-no-fix.wfomcs  function.mln  head-middle-tail.wfomcs  linear_order_perm.wfomcs  molecule.mln  nonisolated_graph.wfomcs  partition.wfomcs  permutation-no-fix-sc2.wfomcs  permutation-no-fix.wfomcs  permutation.mln  test.wfomcs
models/combs/: func_ordered.wfomcs  multisets.wfomcs  p2.wfomcs  tmp.wfomcs  tmp1.wfomcs  tvs.wfomcs  workers.wfomcs
sampling_fo2/: context.py  count_distribution.py  entropy.py  existential_context.py  infer.py  map.py  problems.py  requirements.txt  sampler.py  unigen_sampler.py  wfomc.py
sampling_fo2/cell_graph/: __init__.py  cell_graph.py  components.py  utils.py
sampling_fo2/context/: __init__.py  existential_context.py  wfomc_context.py  wfoms_context.py
sampling_fo2/fol/: backend.py  boolean_algebra.py  sc2.py  snf.py  syntax.py  utils.py
sampling_fo2/inference/: db.py  inferencer.py
sampling_fo2/network/: __init__.py  constraint.py  mln.py
sampling_fo2/parser/: __init__.py  cardinality_constraints_grammar.py  db_parser.py  (+8 more)
scripts/: concentration_test.py
tests/: test_model_satisfaction.py  wfomc_test.py
(+6 files in other folders)
