[project]
name = "sampling-fo2"
version = "0.1.0"
description = "An exact lifted sampler for two-variable fragments of first-order logic."
readme = "README.md"
requires-python = ">=3.11"
author = [
      { name = "lucienwang1009", email = "lucienwang1009@gmail.com" }
]
dependencies = [
    "tqdm>=4.67.1",
    "wfomc",
]

[project.scripts]
sampler = "sampling_fo2.sampler:main"


[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
wfomc = { git = "https://github.com/yuanhong-wang/WFOMC.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.3",
    "tabulate>=0.9.0",
]
